Updates from merging latest code in.