@@ -18,7 +18,6 @@
 package org.apache.solr.handler.admin;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import org.apache.solr.api.Api;
 import org.apache.solr.api.JerseyResource;
@@ -116,7 +115,7 @@ public class HealthCheckHandler extends RequestHandlerBase {
 
   @Override
   public Collection<Api> getApis() {
-    return Collections.emptyList();
+    return List.of();
   }
 
   @Override
